@@ -1,11 +1,8 @@
 package net.minecraft.server.packs.resources;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
@@ -15,11 +12,11 @@ import net.minecraft.server.packs.PackResources;
 public interface ResourceManager extends ResourceProvider {
     Set<String> getNamespaces();
 
-    boolean hasResource(ResourceLocation var1);
+    List<Resource> getResourceStack(ResourceLocation var1);
 
-    List<Resource> getResources(ResourceLocation var1) throws IOException;
+    Map<ResourceLocation, Resource> listResources(String var1, Predicate<ResourceLocation> var2);
 
-    Collection<ResourceLocation> listResources(String var1, Predicate<String> var2);
+    Map<ResourceLocation, List<Resource>> listResourceStacks(String var1, Predicate<ResourceLocation> var2);
 
     Stream<PackResources> listPacks();
 
@@ -28,27 +25,27 @@ public interface ResourceManager extends ResourceProvider {
 
         @Override
         public Set<String> getNamespaces() {
-            return ImmutableSet.of();
+            return Set.of();
         }
 
         @Override
-        public Resource getResource(ResourceLocation param0) throws IOException {
-            throw new FileNotFoundException(param0.toString());
+        public Optional<Resource> getResource(ResourceLocation param0) {
+            return Optional.empty();
         }
 
         @Override
-        public boolean hasResource(ResourceLocation param0) {
-            return false;
+        public List<Resource> getResourceStack(ResourceLocation param0) {
+            return List.of();
         }
 
         @Override
-        public List<Resource> getResources(ResourceLocation param0) {
-            return ImmutableList.of();
+        public Map<ResourceLocation, Resource> listResources(String param0, Predicate<ResourceLocation> param1) {
+            return Map.of();
         }
 
         @Override
-        public Collection<ResourceLocation> listResources(String param0, Predicate<String> param1) {
-            return ImmutableSet.of();
+        public Map<ResourceLocation, List<Resource>> listResourceStacks(String param0, Predicate<ResourceLocation> param1) {
+            return Map.of();
         }
 
         @Override
